# INKFORGE

./: .clinerules  .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SPACE_README.md  app.py  data_collector.html  docker-compose.yml  requirements-hf.txt  setup_hf.py  train.py
.github/: AI_GUIDELINES.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  worker.py
backend/app/api/routes/: export.py  generate.py  health.py  styles.py
backend/app/ml/: dataset.py  llm_engine.py  model.py  utils.py
backend/app/models/: schemas.py
backend/app/services/: inference.py  renderer.py
backend/tests/: run_backend_integration.py  test_api.py  test_backend.py  test_inference.py
configs/: inference.yaml  lstm_mdn_base.yaml
data/: .gitkeep
docs/: API.md  ARCHITECTURE.md
docs/assets/: .gitkeep
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/assets/: .gitkeep
frontend/src/components/: .gitkeep  CanvasBoard.jsx
frontend/src/hooks/: .gitkeep
frontend/src/network/: api.js
frontend/src/stores/: .gitkeep
frontend/src/utils/: .gitkeep
scripts/: download_checkpoint.py  download_iam.py  preprocess.py
